# weldingtest

./: README.md  pyproject.toml
configs/: default_pipeline.json
examples/: background.json  scene.json
src/welding_vision/: __init__.py  cli.py  config.py  geometry.py  io.py  models.py  pipeline.py  synthetic.py
tests/: test_pipeline.py
