[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "welding-vision"
version = "0.1.0"
description = "Pure Python point-cloud pipeline for workpiece extraction and weld seam detection."
requires-python = ">=3.11"
authors = [{ name = "Codex" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

